--- a/DiamondCostCalculator.DocumentProvider/DiamondCostCalculator.DocumentProvider.csproj
+++ b/DiamondCostCalculator.DocumentProvider/DiamondCostCalculator.DocumentProvider.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Excel\ExcelDocument.cs" />
     <Compile Include="Excel\ExcelReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Word\Helpers\WordHelper.cs" />
+    <Compile Include="Word\WordReportCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
