--- a/DiamondCostCalculator.Documents/DiamondCostCalculator.Documents.csproj
+++ b/DiamondCostCalculator.Documents/DiamondCostCalculator.Documents.csproj
@@ -84,8 +84,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Excel\Documents\SmallDocument.cs" />
     <Compile Include="Excel\ExcelHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Word\IReport.cs" />
+    <Compile Include="Word\ReportGenerator.cs" />
+    <Compile Include="Word\Reports\DefaultReport.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DiamondCostCalculator.DocumentContract\DiamondCostCalculator.DocumentContract.csproj">
