Implement simple CSV parser, start implement main logic

--- a/DiamondCostCalculator.Documents/DiamondCostCalculator.Documents.csproj
+++ b/DiamondCostCalculator.Documents/DiamondCostCalculator.Documents.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSV\CSVParser.cs" />
     <Compile Include="Excel\Documents\SmallDocument.cs" />
     <Compile Include="Excel\ExcelHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
