--- a/DiamondCostCalculator.Core/DiamondCostCalculator.Core.csproj
+++ b/DiamondCostCalculator.Core/DiamondCostCalculator.Core.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{673005D9-4078-4306-B6D6-8D80EC9521C1}</ProjectGuid>
+    <ProjectGuid>{BBCB2B55-0FE6-4F54-AAEE-A67FF4150F70}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DiamondCostCalculator.DependencyResolver</RootNamespace>
-    <AssemblyName>DiamondCostCalculator.DependencyResolver</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>DiamondCostCalculator.Core</RootNamespace>
+    <AssemblyName>DiamondCostCalculator.Core</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
     <CodeContractsAssemblyMode>0</CodeContractsAssemblyMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -75,10 +74,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.2.2.0\lib\net40\Ninject.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -89,27 +84,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dependencies.cs" />
-    <Compile Include="Deps.cs" />
+    <Compile Include="Command\ICommand.cs" />
+    <Compile Include="Command\Implementations\DefaultCommand.cs" />
+    <Compile Include="OrderInfo\Discount.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resolver.cs" />
+    <Compile Include="OrderInfo\Quality.cs" />
+    <Compile Include="OrderInfo\Shape.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DiamondCostCalculator.DocumentContract\DiamondCostCalculator.DocumentContract.csproj">
-      <Project>{969ee713-0b53-48ed-86e3-8fdbe175b8f9}</Project>
-      <Name>DiamondCostCalculator.DocumentContract</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DiamondCostCalculator.DocumentProvider\DiamondCostCalculator.DocumentProvider.csproj">
-      <Project>{64fb7c38-9572-4c39-980e-18c358b789fc}</Project>
-      <Name>DiamondCostCalculator.DocumentProvider</Name>
+    <ProjectReference Include="..\DiamondCostCalculator.DependencyResolver\DiamondCostCalculator.DependencyResolver.csproj">
+      <Project>{673005d9-4078-4306-b6d6-8d80ec9521c1}</Project>
+      <Name>DiamondCostCalculator.DependencyResolver</Name>
     </ProjectReference>
     <ProjectReference Include="..\DiamondCostCalculator.Documents\DiamondCostCalculator.Documents.csproj">
       <Project>{4af39ea7-f1cd-41c5-b0a9-12df9a8f4b3d}</Project>
       <Name>DiamondCostCalculator.Documents</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
