--- a/DiamondCostCalculator.DocumentProvider/DiamondCostCalculator.DocumentProvider.csproj
+++ b/DiamondCostCalculator.DocumentProvider/DiamondCostCalculator.DocumentProvider.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Excel\ExcelReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Word\Helpers\WordHelper.cs" />
-    <Compile Include="Word\WordReportCreator.cs" />
+    <Compile Include="Word\WordProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
