--- a/DiamondCostCalculator.Documents/DiamondCostCalculator.Documents.csproj
+++ b/DiamondCostCalculator.Documents/DiamondCostCalculator.Documents.csproj
@@ -88,9 +88,16 @@
     <Compile Include="Excel\Documents\SmallDocument.cs" />
     <Compile Include="Excel\ExcelHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Word\IReport.cs" />
+    <Compile Include="Word\Commands\CommandConfiguration.cs" />
+    <Compile Include="Word\Commands\CommandContext.cs" />
+    <Compile Include="Word\Commands\ICommand.cs" />
+    <Compile Include="Word\Data\Table1.cs" />
+    <Compile Include="Word\Report.cs" />
+    <Compile Include="Word\ReportFactory.cs" />
     <Compile Include="Word\ReportGenerator.cs" />
-    <Compile Include="Word\Reports\DefaultReport.cs" />
+    <Compile Include="Word\Data\ReportTable.cs" />
+    <Compile Include="Word\Reports\ConclusionReport.cs" />
+    <Compile Include="Word\ReportType.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DiamondCostCalculator.DocumentContract\DiamondCostCalculator.DocumentContract.csproj">
@@ -101,7 +108,12 @@
       <Project>{64fb7c38-9572-4c39-980e-18c358b789fc}</Project>
       <Name>DiamondCostCalculator.DocumentProvider</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DiamondCostCalculator.LocalizationEn\DiamondCostCalculator.LocalizationEn.csproj">
+      <Project>{fca82364-51cd-4b05-b2a9-a975f105ae3a}</Project>
+      <Name>DiamondCostCalculator.LocalizationEn</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
