Get rid of Documents library

--- a/DiamondCostCalculator.Core/DiamondCostCalculator.Core.csproj
+++ b/DiamondCostCalculator.Core/DiamondCostCalculator.Core.csproj
@@ -97,9 +97,17 @@
       <Project>{673005d9-4078-4306-b6d6-8d80ec9521c1}</Project>
       <Name>DiamondCostCalculator.DependencyResolver</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DiamondCostCalculator.DocumentContract\DiamondCostCalculator.DocumentContract.csproj">
+      <Project>{969EE713-0B53-48ED-86E3-8FDBE175B8F9}</Project>
+      <Name>DiamondCostCalculator.DocumentContract</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DiamondCostCalculator.Documents\DiamondCostCalculator.Documents.csproj">
       <Project>{4af39ea7-f1cd-41c5-b0a9-12df9a8f4b3d}</Project>
       <Name>DiamondCostCalculator.Documents</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DiamondCostCalculator.Reporting\DiamondCostCalculator.Reporting.csproj">
+      <Project>{7fbb0e2d-9721-44ea-97f8-3d32e8519659}</Project>
+      <Name>DiamondCostCalculator.Reporting</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
