--- a/DiamondCostCalculator.DependencyResolver/DiamondCostCalculator.DependencyResolver.csproj
+++ b/DiamondCostCalculator.DependencyResolver/DiamondCostCalculator.DependencyResolver.csproj
@@ -90,7 +90,7 @@
   <ItemGroup>
     <Compile Include="Dependencies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resolver.cs" />
+    <Compile Include="Container.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DiamondCostCalculator.DocumentContract\DiamondCostCalculator.DocumentContract.csproj">
